[gd_scene load_steps=2 format=3 uid="uid://prw42y7licu0"]

[ext_resource type="Script" uid="uid://3gj4px27qwfo" path="res://Scripts/battle_ui.gd" id="1_a7smn"]

[node name="Battle_controller" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -360.0
offset_bottom = -180.0
scale = Vector2(0.75, 0.75)
script = ExtResource("1_a7smn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 165.0
offset_right = 308.0
offset_bottom = 231.0
grow_vertical = 2

[node name="Attack_bag" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AttackButton" type="Button" parent="HBoxContainer/Attack_bag"]
layout_mode = 2
text = "Attack"

[node name="BagButton" type="Button" parent="HBoxContainer/Attack_bag"]
layout_mode = 2
text = "Bag"

[node name="Change_run" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ChangeButton" type="Button" parent="HBoxContainer/Change_run"]
layout_mode = 2
text = "Change"

[node name="RunButton" type="Button" parent="HBoxContainer/Change_run"]
layout_mode = 2
text = "Run"

[connection signal="pressed" from="HBoxContainer/Attack_bag/AttackButton" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="HBoxContainer/Change_run/RunButton" to="." method="_on_run_pressed"]
